// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentResultsFooter component renders correctly 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  >
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-1"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-2 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-2 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-2 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-downloads AnchorLink-root-5 Anchorlink MuiTypography-colorPrimary"
      type="button"
    >
      <span>
        MC: downloadList.clear
      </span>
    </a>
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-11 MuiButton-contained Button-contained-13 MuiButton-containedPrimary"
      data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (4)\\",\\"action\\":\\"[\\\\\\"http://doesnot-exist.com/fileName\\\\\\",\\\\\\"http://pimDocument\\\\\\",\\\\\\"http://pimDocument\\\\\\"]\\"}"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-14"
      >
        MC: downloadList.download (4)
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <p
      class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-31 MuiTypography-body1"
      data-testid="typography"
    >
      This site is protected by reCAPTCHA and the Google 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-5 Anchorlink MuiTypography-colorPrimary"
        href="https://policies.google.com/privacy"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Privacy Policy
        </span>
      </a>
       and 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-5 Anchorlink MuiTypography-colorPrimary"
        href="https://policies.google.com/terms"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Terms of Service
        </span>
      </a>
       apply.
    </p>
  </div>
</div>
`;

exports[`DocumentResultsFooter component renders correctly if download item is array 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  >
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-39"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-40 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-40 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-40 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-downloads AnchorLink-root-43 Anchorlink MuiTypography-colorPrimary"
      type="button"
    >
      <span>
        MC: downloadList.clear
      </span>
    </a>
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-49 MuiButton-contained Button-contained-51 MuiButton-containedPrimary"
      data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (2)\\",\\"action\\":\\"[\\\\\\"http://pimDocument\\\\\\",\\\\\\"http://pimDocument\\\\\\"]\\"}"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-52"
      >
        MC: downloadList.download (2)
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <p
      class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-69 MuiTypography-body1"
      data-testid="typography"
    >
      This site is protected by reCAPTCHA and the Google 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-43 Anchorlink MuiTypography-colorPrimary"
        href="https://policies.google.com/privacy"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Privacy Policy
        </span>
      </a>
       and 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-43 Anchorlink MuiTypography-colorPrimary"
        href="https://policies.google.com/terms"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Terms of Service
        </span>
      </a>
       apply.
    </p>
  </div>
</div>
`;

exports[`DocumentResultsFooter component renders correctly if onDownloadClick not passed 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  >
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-77"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-78 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-78 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-78 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
